fix gaps between sections in mobile version

--- a/src/components/AboutMe/AboutMe.module.scss
+++ b/src/components/AboutMe/AboutMe.module.scss
@@ -166,7 +166,7 @@
         }
     }
     .mainsection{
-        gap: 20px;
+        gap: 60px;
     }
 
     .wrapper{
@@ -192,7 +192,7 @@
         line-height: 14px;
     }
     .media {
-        margin-top: 20px;
+        margin-top: 60px;
     }
 
     .medianame {
